--- a/Pages/Products.cshtml
+++ b/Pages/Products.cshtml
@@ -15,7 +15,7 @@
                     <ul>
                         <li class="active" data-filter="*">All</li>
                         <li data-filter=".artwork">Artwork</li>
-                        <li data-filter=".handcrafted-jewelry">Handcrafted jewelry</li>
+                        <li data-filter=".handcrafted-jewelry">Handcrafted Jewelry</li>
                         <li data-filter=".home-decor">Home decor items</li>
                         <li data-filter=".clothing">Clothing and accessories</li>
                         <li data-filter=".pottery">Pottery and ceramics</li>
