--- a/Pages/ProductView.cshtml
+++ b/Pages/ProductView.cshtml
@@ -103,7 +103,7 @@
                     <form>
                         <div class="mb-3">
                             <select class="form-select" id="rating">
-                                <option selected disabled>Select a rating</option>
+                                <option selected disabled>Select a Rating</option>
                                 <option value="1">1 star</option>
                                 <option value="2">2 stars</option>
                                 <option value="3">3 stars</option>
