--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -379,6 +379,48 @@ h6 span{
                                             <div class="form-group mt-2">
                                                 <input type="text" name="FreelancerExperience" class="form-style" placeholder="Experience" autocomplete="off">
                                             </div>
+
+                                                <div class="form-group mt-2">
+                                                    <label for="WorkingHours">Working hours:</label>
+                                                    <div class="input-group">
+                                                        <div class="input-group-prepend">
+                                                            <span class="input-group-text">from</span>
+                                                        </div>
+                                                        <select name="WorkingHour" class="form-control">
+                                                            <option value="" selected disabled>Hours</option>
+                                                            <script>
+                                                                for (let i = 1; i <= 12; i++) {
+                                                                    document.write('<option value="' + i + '">' + i + '</option>');
+                                                                }
+                                                            </script>
+                                                        </select>
+                                                        <select name="AmPm" class="form-control">
+                                                            <option value="" selected disabled>AM/PM</option>
+                                                            <option value="AM">AM</option>
+                                                            <option value="PM">PM</option>
+                                                        </select>
+                                                        <div class="input-group-prepend">
+                                                            <span class="input-group-text">from</span>
+                                                        </div>
+                                                        <select name="WorkingHour2" class="form-control">
+                                                            <option value="" selected disabled>Hour</option>
+                                                            <script>
+                                                                for (let i = 1; i <= 12; i++) {
+                                                                    document.write('<option value="' + i + '">' + i + '</option>');
+                                                                }
+                                                            </script>
+                                                        </select>
+                                                        <select name="AmPm2" class="form-control">
+                                                            <option value="" selected disabled>AM/PM</option>
+                                                            <option value="AM">AM</option>
+                                                            <option value="PM">PM</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+
+
+
+
                                             <div class="form-group mt-2">
                                                 <input type="text" name="freelancerProjectN" class="form-style" placeholder="Project Name" autocomplete="off">
                                             </div>
