added new field in signup

--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -383,9 +383,7 @@ h6 span{
                                                 <div class="form-group mt-2">
                                                     <label for="WorkingHours">Working hours:</label>
                                                     <div class="input-group">
-                                                        <div class="input-group-prepend">
-                                                            <span class="input-group-text">from</span>
-                                                        </div>
+                                                        <span class="input-group-text">from</span>
                                                         <select name="WorkingHour" class="form-control">
                                                             <option value="" selected disabled>Hours</option>
                                                             <script>
@@ -399,9 +397,7 @@ h6 span{
                                                             <option value="AM">AM</option>
                                                             <option value="PM">PM</option>
                                                         </select>
-                                                        <div class="input-group-prepend">
-                                                            <span class="input-group-text">from</span>
-                                                        </div>
+                                                        <span class="input-group-text">to</span>
                                                         <select name="WorkingHour2" class="form-control">
                                                             <option value="" selected disabled>Hour</option>
                                                             <script>
