--- a/Pages/UserInfo.cshtml
+++ b/Pages/UserInfo.cshtml
@@ -97,7 +97,8 @@
                                 </p>
                                 <br /><br/>
                                 <div class="d-flex justify-content-center mb-2">
-                                    <a href="/AddSP"><button type="button" class="btn btn-outline-primary ms-1">Add Product/Service</button></a>
+                                    <a href="/AddSP"><button type="button" class="btn btn-outline-primary ms-1">Add Product</button></a>
+                                    <a href="/AddSP2"><button type="button" class="btn btn-outline-primary ms-1">Add Service</button></a>
                                 </div>
                             </div>
                         </div>
