--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer_about_logo">
-                            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                            <a href="./Index"><img src="img/logo.png" alt=""></a>
                         </div>
                     </div>
                 </div>
