--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -112,7 +112,7 @@ h6 span{
 }
 .card-front, .card-back {
   width: 100%;
-  height: 100%;
+  height: 115%;
   background-color: #2a2b38;
   background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat.svg');
   background-position: bottom center;
@@ -275,8 +275,12 @@ h6 span{
   box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 }
 </style>
-
-
+@if (TempData.ContainsKey("ErrorMessage"))
+{
+    <div class="alert alert-danger" role="alert">
+        @TempData["ErrorMessage"]
+    </div>
+}
 <div class="section">
     <div class="container">
         <div class="row full-height justify-content-center">
@@ -287,7 +291,7 @@ h6 span{
                     <label for="reg-log"></label>
                     <div class="card-3d-wrap mx-auto">
                         <div class="card-3d-wrapper">
-                            <div class="card-front">
+                            <div class="card-back">
                                 <div class="center-wrap">
                                     <div class="section text-center">
                                         <h4 class="mb-4 pb-3">Log In</h4>
@@ -310,15 +314,16 @@ h6 span{
                             </div>
 
 
-                            <div class="card-back" id="signup-form">
+                            <div class="card-front" id="signup-form">
                                 <div class="center-wrap">
                                     <div class="section text-center">
                                         <h4 class="mb-4 pb-3">Sign Up</h4>
                                         <form method="post" asp-page-handler="OnPostSignup">
-                                        <div class="form-group">
-                                            <input type="text" name="fname" class="form-style" placeholder="Your First Name" id="fname" autocomplete="off">
-                                            <i class="input-icon uil uil-user"></i>
-                                        </div>
+                                            <div class="form-group">
+                                                <input type="text" asp-for="fname" class="form-style" placeholder="Your First Name" id="fname" autocomplete="off">
+                                                <i class="input-icon uil uil-user"></i>
+                                                <span asp-validation-for="fname" class="text-danger"></span>
+                                            </div>
                                         <div class="form-group mt-2">
                                             <input type="text" name="lname" class="form-style" placeholder="Your Last Name" id="lname" autocomplete="off">
                                             <i class="input-icon uil uil-user"></i>
@@ -331,6 +336,10 @@ h6 span{
                                             <input type="password" name="pass" class="form-style" placeholder="Your Password" id="pass" autocomplete="off">
                                             <i class="input-icon uil uil-lock-alt"></i>
                                         </div>
+                                            <div class="form-group mt-2">
+                                                <input type="password" name="pass2" class="form-style" placeholder="Re-enter your Password" id="pass" autocomplete="off">
+                                                <i class="input-icon uil uil-lock-alt"></i>
+                                            </div>
                                         <div class="form-group mt-2">
                                             <input type="tel" name="phone" class="form-style" placeholder="Your Phone Number" id="phone" autocomplete="off">
                                             <i class="input-icon uil uil-phone"></i>
@@ -392,7 +401,7 @@ h6 span{
                                                                 }
                                                             </script>
                                                         </select>
-                                                        <select name="AmPm" class="form-control">
+                                                        <select asp-for="AmPm" class="form-control">
                                                             <option value="" selected disabled>AM/PM</option>
                                                             <option value="AM">AM</option>
                                                             <option value="PM">PM</option>
@@ -406,7 +415,7 @@ h6 span{
                                                                 }
                                                             </script>
                                                         </select>
-                                                        <select name="AmPm2" class="form-control">
+                                                        <select asp-for="AmPm2" class="form-control">
                                                             <option value="" selected disabled>AM/PM</option>
                                                             <option value="AM">AM</option>
                                                             <option value="PM">PM</option>
