--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                             <li><a href="./UserInfo"><i class="fa fa-user"></i></a></li>
                             <li><a href="./ShopCart"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
                         </ul>
-                        <div class="header__cart__price">item: <span>$150.00</span></div>
+                        <div class="header__cart__price"><span></span></div>
                     </div>
                 </div>
             </div>
