--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -96,11 +96,12 @@ h6 span{
 	position: relative;
 	width: 500px; 
 	max-width: 100%;
-	height: 950px; 
+	height: 1000px; 
 	-webkit-transform-style: preserve-3d;
 	transform-style: preserve-3d;
 	perspective: 800px;
-	margin-top: 60px;
+	margin-top: 30px;
+    margin-bottom:60;
 }
 
 .card-3d-wrapper {
@@ -297,7 +298,7 @@ h6 span{
                     <label for="reg-log"></label>
                     <div class="card-3d-wrap mx-auto">
                         <div class="card-3d-wrapper">
-                            <div class="card-back">
+                            <div class="card-front">
                                 <div class="center-wrap">
                                     <div class="section text-center">
                                         <h4 class="mb-4 pb-3">Log In</h4>
@@ -320,7 +321,7 @@ h6 span{
                             </div>
 
 
-                            <div class="card-front" id="signup-form">
+                            <div class="card-back" id="signup-form">
                                 <div class="center-wrap">
                                     <div class="section text-center">
                                         <h4 class="mb-4 pb-3">Sign Up</h4>
