--- a/Pages/Logout.cshtml
+++ b/Pages/Logout.cshtml
@@ -38,7 +38,8 @@
     </style>
 </head>
 <body>
-    <div style id="message">Already logged in. Logout?</div>
+    <div style id="message">Already logged in</div>
+    <div style id="message">Do you want to Logout?</div>
     <form method="post">
         <button type="submit" id="logoutButton">Logout</button>
     </form>
