--- a/Pages/Products.cshtml
+++ b/Pages/Products.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Products page";
 }
 <!-- Featured Section Begin -->
-<section class="featured spad">
+@* <section class="featured spad">
+
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -103,4 +104,42 @@
                     </div>
                 </div>
             </div>
+</section> *@
+
+<section class="featured spad">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-title">
+                    <h2>Featured Product</h2>
+                </div>
+                <div class="featured__controls">
+                    <ul>
+                        <li class="active" data-filter="*">All</li>
+                        <li data-filter=".artwork">Artwork</li>
+                        <li data-filter=".handcrafted-jewelry">Handcrafted Jewelry</li>
+                        <li data-filter=".home-decor">Home decor items</li>
+                        <li data-filter=".clothing">Clothing and accessories</li>
+                        <li data-filter=".pottery">Pottery and ceramics</li>
+                        <li data-filter=".woodwork">Woodwork and furniture</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row featured__filter" id="productList">
+            @foreach (var product in Model.products)
+            {
+                <div class="col-lg-3 col-md-4 col-sm-6 mix @product.Category">
+                    <div class="featured__item">
+                        <div class="featured__item__text">
+                            <h6><a href="ProductView">@product.Name</a></h6>
+                            <h5>@product.Price</h5>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
 </section>
+
+    <!-- Any additional content or styling -->
