--- a/Pages/Services.cshtml
+++ b/Pages/Services.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Services page";
 }
-<section class="featured spad">
+@* <section class="featured spad">
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
@@ -126,4 +126,42 @@
     </div>
 </div>
 </section>
-<!-- Featured Section End -->
+<!-- Featured Section End --> *@
+
+
+<section class="featured spad">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-title">
+                    <h2>Featured Service</h2>
+                </div>
+                <div class="featured__controls">
+                    <ul>
+                        <li class="active" data-filter="*">All</li>
+                        <li data-filter=".antique">Antiquing and restoration</li>
+                        <li data-filter=".painting">Painting and drawing</li>
+                        <li data-filter=".graphic-design">Graphic design</li>
+                        <li data-filter=".photography">Photography</li>
+                        <li data-filter=".fashion-design">Fashion Design</li>
+                        <li data-filter=".mechanical">Mechanical and repair</li>
+                        <li data-filter=".carpentry">Carpentry</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row featured__filter" id="productList">
+            @foreach (var product in Model.Services)
+            {
+                <div class="col-lg-3 col-md-4 col-sm-6 mix @product.Category">
+                    <div class="featured__item">
+                        <div class="featured__item__text">
+                            <h6><a href="ProductView">@product.Name</a></h6>
+                            <h5>@product.Price</h5>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</section>
